--- a/src/main/resources/fx/views/main.fxml
+++ b/src/main/resources/fx/views/main.fxml
@@ -31,17 +31,6 @@
                         </Menu>
                     </menus>
                 </MenuBar>
-                <ToolBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-                    <items>
-                        <Label text="%view.main.timerange" />
-                        <ComboBox fx:id="timerangeComboBox" prefWidth="150.0" />
-                        <Button fx:id="fetchWorklogButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="26.0">
-                            <tooltip>
-                                <Tooltip text="%view.main.download" />
-                            </tooltip>
-                        </Button>
-                    </items>
-                </ToolBar>
             </children>
         </VBox>
     </top>
@@ -59,7 +48,31 @@
         </StackPane>
     </bottom>
    <center>
-      <TabPane fx:id="resultTabPane" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER" />
+      <StackPane alignment="TOP_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="TOP_LEFT">
+         <children>
+            <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+               <children>
+                      <ToolBar maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS">
+                          <items>
+                              <Label text="%view.main.timerange" />
+                              <ComboBox fx:id="timerangeComboBox" prefWidth="150.0" />
+                              <Button fx:id="fetchWorklogButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="26.0">
+                                  <tooltip>
+                                      <Tooltip text="%view.main.download" />
+                                  </tooltip>
+                              </Button>
+                          </items>
+                      </ToolBar>
+                  <TabPane fx:id="resultTabPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER" VBox.vgrow="ALWAYS" />
+               </children>
+            </VBox>
+            <StackPane fx:id="modalOverlaySpinner" style="-fx-background-color: rgba(0, 0, 0, 0.5);">
+               <children>
+                  <ProgressIndicator maxHeight="60.0" maxWidth="60.0" StackPane.alignment="CENTER" />
+               </children>
+            </StackPane>
+         </children>
+      </StackPane>
    </center>
 
 </BorderPane>
