- free date selection (not fully functional yet)

--- a/src/main/resources/fx/css/main.css
+++ b/src/main/resources/fx/css/main.css
@@ -9,6 +9,10 @@
     -fx-progress-color: #a5cdff;
 }
 
+.required {
+    -fx-border-color: red;
+}
+
 .weekend {
     -fx-background-color: rgba(189, 255, 209, 0.5);
 }
