- cleaning up maincontroller - fetching groupbycategories

--- a/src/main/resources/fx/css/main.css
+++ b/src/main/resources/fx/css/main.css
@@ -5,7 +5,7 @@
     -fx-background-size: auto;
 }
 
-#modalOverlaySpinner .progress-indicator {
+#waitScreenOverlay .progress-indicator {
     -fx-progress-color: #a5cdff;
 }
 
