--- a/src/main/resources/fx/views/settings.fxml
+++ b/src/main/resources/fx/views/settings.fxml
@@ -1,73 +1,81 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="800.0"
-            xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="de.pbauerochse.worklogviewer.fx.SettingsViewController">
+
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.pbauerochse.worklogviewer.fx.SettingsViewController">
     <bottom>
         <HBox alignment="CENTER_RIGHT" spacing="5.0" BorderPane.alignment="CENTER_RIGHT">
             <children>
-                <Button fx:id="cancelSettingsButton" cancelButton="true" mnemonicParsing="false"
-                        text="%view.settings.cancel"/>
-                <Button fx:id="saveSettingsButton" defaultButton="true" mnemonicParsing="false"
-                        text="%view.settings.save"/>
+                <Button fx:id="cancelSettingsButton" cancelButton="true" mnemonicParsing="false" text="%view.settings.cancel" />
+                <Button fx:id="saveSettingsButton" defaultButton="true" mnemonicParsing="false" text="%view.settings.save" />
             </children>
             <padding>
-                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </padding>
         </HBox>
     </bottom>
     <center>
         <GridPane hgap="5.0" BorderPane.alignment="TOP_LEFT">
             <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="300.0"/>
-                <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="300.0" />
+                <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
             </rowConstraints>
             <children>
-                <Label text="%view.settings.youtrackurl"/>
-                <TextField fx:id="youtrackUrlField" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
+                <Label text="%view.settings.youtrackurl" />
+                <TextField fx:id="youtrackUrlField" GridPane.columnIndex="1" />
 
-                <Label text="%view.settings.youtrackuser" GridPane.rowIndex="1"/>
-                <TextField fx:id="youtrackUsernameField" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+                <Label text="%view.settings.youtrackuser" GridPane.rowIndex="1" />
+                <TextField fx:id="youtrackUsernameField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-                <Label text="%view.settings.youtrackpassword" GridPane.rowIndex="2"/>
-                <PasswordField fx:id="youtrackPasswordField" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+                <Label text="%view.settings.youtrackpassword" GridPane.rowIndex="2" />
+                <PasswordField fx:id="youtrackPasswordField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
-                <Label text="%view.settings.workhours" GridPane.rowIndex="3"/>
-                <ComboBox fx:id="workhoursComboBox" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1"
-                          GridPane.rowIndex="3"/>
+                <Label text="%view.settings.youtrackauthenticationmethod" GridPane.rowIndex="3"/>
+                <ComboBox fx:id="youtrackAuthenticationMethodField" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
 
-                <Label text="%view.settings.showall" GridPane.rowIndex="4"/>
-                <CheckBox fx:id="showAllWorklogsCheckBox" mnemonicParsing="false" GridPane.columnIndex="1"
-                          GridPane.rowIndex="4"/>
+                <Label text="%view.settings.youtrackoauthserviceid" GridPane.rowIndex="4"/>
+                <TextField fx:id="youtrackOAuthServiceIdField" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
 
-                <Label text="%view.settings.showStatistics" GridPane.rowIndex="5"/>
-                <CheckBox fx:id="showStatisticsCheckBox" mnemonicParsing="false" GridPane.columnIndex="1"
-                          GridPane.rowIndex="5"/>
+                <Label text="%view.settings.youtrackoauthservicesecret" GridPane.rowIndex="5"/>
+                <PasswordField fx:id="youtrackOAuthServiceSecretField" GridPane.columnIndex="1" GridPane.rowIndex="5"/>
 
-                <Label text="%view.settings.autoload" GridPane.rowIndex="6"/>
-                <CheckBox fx:id="loadDataAtStartupCheckBox" mnemonicParsing="false" GridPane.columnIndex="1"
-                          GridPane.rowIndex="6"/>
+                <Label text="%view.settings.workhours" GridPane.rowIndex="6" />
+                <ComboBox fx:id="workhoursComboBox" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="6" />
 
-                <Label text="%view.settings.showDecimalsInExcel" GridPane.rowIndex="7"/>
-                <CheckBox fx:id="showDecimalsInExcel" mnemonicParsing="false" GridPane.columnIndex="1"
-                          GridPane.rowIndex="7"/>
+                <Label text="%view.settings.showall" GridPane.rowIndex="7" />
+                <CheckBox fx:id="showAllWorklogsCheckBox" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+
+                <Label text="%view.settings.showStatistics" GridPane.rowIndex="8" />
+                <CheckBox fx:id="showStatisticsCheckBox" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+
+                <Label text="%view.settings.autoload" GridPane.rowIndex="9" />
+                <CheckBox fx:id="loadDataAtStartupCheckBox" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+
+                <Label text="%view.settings.showDecimalsInExcel" GridPane.rowIndex="10" />
+                <CheckBox fx:id="showDecimalsInExcel" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="10" />
+
+
 
             </children>
             <padding>
-                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </padding>
         </GridPane>
     </center>
